DuPont DevSB/src/objects/OrgGroupMetadata__c.object
<CustomObject>
    <description>Metadata associated with an Organizational Group</description>
    <fields>
        <fullName>Comments__c</fullName>
        <description>Comments related to this OrgGroup Metadata</description>
        <label>Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Legacy_One_DuPont_SFID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>This field is populated with the legacy One DuPont SF ID and was used during the split to map related records during the split and insert process to maintain the migrated record’s parent child record relationships.</description>
        <externalId>true</externalId>
        <inlineHelpText>This is the pre-split original 18 digit Salesforce ID of this record that came from the original One Dupont Salesforce instance before the business units were separated. Its is case sensitive and unique.</inlineHelpText>
        <label>Legacy One DuPont SFID</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Metadata_Type__c</fullName>
        <description>Metadata Asset Type to filter Metadata Lookup</description>
        <label>Metadata Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>APEX_CODE</fullName>
                </value>
                <value>
                    <fullName>BusinessProcess</fullName>
                </value>
                <value>
                    <fullName>CustomObjectCriteriaBasedSharingRule</fullName>
                </value>
                <value>
                    <fullName>CustomObjectOwnerSharingRule</fullName>
                </value>
                <value>
                    <fullName>CustomPageWebLink</fullName>
                </value>
                <value>
                    <fullName>CustomSite</fullName>
                </value>
                <value>
                    <fullName>CustomTab</fullName>
                </value>
                <value>
                    <fullName>DashboardFolder</fullName>
                </value>
                <value>
                    <fullName>DocumentFolder</fullName>
                </value>
                <value>
                    <fullName>EmailFolder</fullName>
                </value>
                <value>
                    <fullName>FIELD</fullName>
                </value>
                <value>
                    <fullName>FieldSet</fullName>
                </value>
                <value>
                    <fullName>Group</fullName>
                </value>
                <value>
                    <fullName>HomePageComponent</fullName>
                </value>
                <value>
                    <fullName>HomePageLayout</fullName>
                </value>
                <value>
                    <fullName>Layout</fullName>
                </value>
                <value>
                    <fullName>Letterhead</fullName>
                </value>
                <value>
                    <fullName>ListView</fullName>
                </value>
                <value>
                    <fullName>NamedFilter</fullName>
                </value>
                <value>
                    <fullName>PermissionSet</fullName>
                </value>
                <value>
                    <fullName>PICKLISTENTRY</fullName>
                </value>
                <value>
                    <fullName>Portal</fullName>
                </value>
                <value>
                    <fullName>Profile</fullName>
                </value>
                <value>
                    <fullName>Queue</fullName>
                </value>
                <value>
                    <fullName>RECORDTYPE</fullName>
                </value>
                <value>
                    <fullName>RemoteSiteSetting</fullName>
                </value>
                <value>
                    <fullName>ReportFolder</fullName>
                </value>
                <value>
                    <fullName>ReportType</fullName>
                </value>
                <value>
                    <fullName>Role</fullName>
                </value>
                <value>
                    <fullName>Scontrol</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OrgGroup__c</fullName>
        <description>Organizational Group this OrgGroupMetadata relates to (Master-Detail relationship)</description>
        <label>Organizational Group</label>
        <referenceTo>OrgGroup__c</referenceTo>
        <relationshipLabel>OrgGroupMetadata</relationshipLabel>
        <relationshipName>OrgGroupMetadata</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Related_Metadata__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related Metadata</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.Metadata_Type__c</field>
                <operation>equals</operation>
                <valueField>Metadata__c.Type__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Metadata__c</referenceTo>
        <relationshipLabel>OrgGroupMetadatas</relationshipLabel>
        <relationshipName>RelatedMetadatas</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>OrgGroupMetadata</label>
    <nameField>
        <label>OrgGroupMetadata Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>OrgGroupMetadata</pluralLabel>
    <recordTypes>
        <fullName>OrgGroupMetadata</fullName>
        <active>true</active>
        <description>Organization Group Metadata</description>
        <label>OrgGroupMetadata</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>